# takobox

./: .dockerignore  .env.example  .gitignore  .mise.toml  .oxlintrc.json  .tool-versions  Caddyfile  Cargo.toml  Justfile  README.md  deno.json  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tailwind.config.cjs
apps/backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile  gleam.toml  manifest.toml  pnpm-lock.yaml  tailwind.config.cjs
apps/backend/.github/workflows/: test.yml
apps/backend/.sqlx/: query-16502257a64af8e18c3f31296d62120cc7e78100a550ad362adccf2e31b133d7.json  query-198f1f26ef696d926e21a1fb80945bd014dc5ce7e058e56926197c0392f82150.json  query-20a2326309eacad0c364b363aebf70283cbbe05b74aaa4c7f07a9884d429a7dc.json  query-39ddc85ba22fa185429a3cb48288fdf8e67dbcd85efa1250b81b20d819154a64.json  query-40dcf85ab28a32416e842091f2ab794e59a9d8ff5e958aa1a3391a0daf5d8ba0.json  query-41bdf40ce36e5898c9473b73384751a86f678de3a80db23c152bfd38f10dabb8.json  query-4abc9572332cbd53b2f6f5038b3e259264e06372677d568c59467b4c797703fd.json  query-4ae789df5f638f50f03687cbc023216b2160e0713cca5b84d3da13475f3fe058.json  query-605698eed4229324ea00e6fb587bc86be25ac750bbd34ee3066df46da5a5ad02.json  query-6d1fab7d78bc7a78d6f6e1b83cc66558b9448985492e7be1f5dae39eb2241adc.json  query-7609165d94c8f1bea9d535b9b7ad727fd06592973d7f83017292d41acb203be6.json  query-781491287efc1c424be304dfb98da17c4e7d8eed89d1b9ea25c8be55335353cf.json  query-9b60e30fb0804b1f5c5c316dd155f36c0e52d77147f1110a7e2cf4a4200572f7.json  query-9d00617966f8aeebb08de6ad981dc3b8697c65f0b23cea4684f525732d8f6706.json  query-9ece9a6c96d5e88cb9d430faf91eea45d6c62045edd1e3563af0f167bd4dfc91.json  query-a0308a0c74be3e2a3c8723f7795c624c16a0887761af941abe09fc73a5ca8e60.json  query-c67812897de7df40792aec611e5648f27a11bc7db889e97e7157d07b6384ba79.json  query-dbd3be63fbcf5bb5363c093452bbb312c6ec318b9fffe915e01bd64bf2eee574.json  query-e64c35fe9f5f2280161a5cbc3205d1d89cc19c37c2086970c29bbf330c4133d1.json  query-fa17ab04afe023e96d5792ee445a81a4bbcfb3034520c429c17912d71dd98584.json  query-ff2615d60e8f663bc84453d0f6eed4dc395d0a48336fd2102b7146052257e43c.json
apps/backend/db/: schema.sql
apps/backend/db/migrations/: 20250702083057_create_sessions_table.sql  20250707145013_create_files_table.sql  20250801090641_add_created_at_and_default_uuid_to_users_table.sql  20250813094720_create_collections_table.sql  20250930115427_create_collection_files_table.sql
apps/backend/migrations/: 0001_create_users_table.sql  0001_initial.sql  0002_create_sessions_table.sql  0002_make_files_name_unique.sql  0003_create_files_table.sql  0003_rename_file_name_and_original_columns.sql  0004_create_collections_table.sql  0005_create_collection_files_table.sql  20250224134749_create_users_table.sql  20250702083057_create_sessions_table.sql  20250707145013_create_files_table.sql  20250801090641_add_created_at_and_default_uuid_to_users_table.sql  20250813094720_create_collections_table.sql  20250930115427_create_collection_files_table.sql
apps/backend/src/: config.rs  db.rs  directories.rs  env.rs  error.rs  lib.rs  main.rs  serialize.rs  state.rs  takobox.gleam
apps/backend/src/api/: error.rs  mod.rs  state.rs
apps/backend/src/app/: context.gleam  router.gleam  web.gleam
apps/backend/src/auth/: jwt.rs  password.rs
apps/backend/src/db/: collection.rs  file.rs  mod.rs  session.rs  user.rs
apps/backend/src/http/: error.rs  mod.rs  state.rs
apps/backend/src/middleware/: auth.rs  rate_limit.rs
apps/backend/src/model/: auth.rs  user.rs
apps/backend/src/models/: collection.rs  file.rs  mod.rs  session.rs  settings.rs  user.rs
apps/backend/src/routes/: auth.rs  collection_files.rs  collections.rs  files.rs  me.rs  mod.rs  settings.rs
apps/backend/templates/: base.html  index.html  login.html  nav.html
apps/backend/test/: test_support.gleam
apps/backend/tests/: common.rs  test_root.rs
(+237 files in other folders)
