[package]
name = "takobox"
version = "0.1.0"
authors = ["Myuwi <myuwi@proton.me>"]
license = "ISC"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = "0.6.19"
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "sqlite", "macros", "uuid", "time"] }
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
