[package]
name = "takobox"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["cookie-private", "file-stream"] }
figment = { version = "0.10.19", features = ["env"] }
governor = "0.10.1"
lazy_static = "1.5.0"
nanoid = "0.4.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["migrate", "runtime-tokio", "sqlite", "time", "tls-native-tls"] }
thiserror = "2.0.16"
time = { version = "0.3.41", features = ["serde"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tower-http = { version = "0.6.6", features = ["trace"] }
tower_governor = "0.8.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
axum-test = "18.1.0"
