[package]
name = "takobox"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
argon2 = { version = "0.5.3", features = ["std"] }
figment = { version = "0.10.19", features = ["env"] }
nanoid = "0.4.0"
regex = "1.11.1"
salvo = { version = "0.88.1", features = ["affix-state", "logging", "oapi", "rate-limiter", "size-limiter"] }
sanitize-filename = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.9.0-alpha.1", features = ["migrate", "runtime-tokio", "sqlite", "time", "tls-native-tls"] }
thiserror = "2.0.16"
time = { version = "0.3.41", features = ["serde"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
